# mcp-server

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  README_JWT_AUTH.md  TESTING.md  docker-compose.yml  gunicorn_config.py  main.py  main_old.py  pyproject.toml  start.sh  test.sh
.windsurf/workflows/: config-file-env-vars.md
src/: agent.py  app.py  config.py  llm.py  logs.py  mcp_server.py  routes.py  tools.py  tools_args.py  utils.py
src/agent/: graph.py  llm.py  main.py  nodes.py  tools.py  workflow.py
src/auth/: jwt_handler.py
src/routes/: auth_routes.py  mcp_routes.py
src/schemas/: auth_schemas.py  mcp_schemas.py
src/services/: database.py  nl2sql.py  oauth_providers.py  oauth_service.py  tools_service.py
src/tools/: __init__.py  args.py  base.py  gmail_tools.py  handlers.py  tools_args.py  verx_rh_tools.py  web_tools.py  youtube_tools.py
tests/: conftest.py  test_tools.py
tests/routes/: test_mcp_routes.py
tests/services/: test_tools_service.py
tests/tools/: test_scrapeurl.py
