[project]
name = "integrating-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-arcade>=1.3.1",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
    "fastapi-mcp==0.3.4",
    "fastapi>=0.115.12",
    "uvicorn==0.34.3",
]
