[project]
name = "mcp-server"
version = "0.1.0"
description = "Servidor MCP (Model Context Protocol) para integração com ferramentas externas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.5.1",
    "langchain-arcade>=1.3.1",
    "python-dotenv>=1.1.0",
    "fastapi>=0.115.12",
    "uvicorn[standard]==0.34.3",
    "gunicorn==21.2.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.24.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]
